@@ -35,8 +35,9 @@ import dagger.hilt.android.qualifiers.ApplicationContext;
 import dagger.hilt.android.scopes.ActivityScoped;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.inject.Inject;
 
@@ -86,20 +87,28 @@ final class VirtualSensorController implements AutoCloseable {
     }
 
     public List<SensorCapabilities> getSensorCapabilities() {
-        return mSensorManager.getSensorList(Sensor.TYPE_ALL).stream()
-                .map(
-                        sensor ->
-                                SensorCapabilities.newBuilder()
-                                        .setType(sensor.getType())
-                                        .setName(sensor.getName())
-                                        .setVendor(sensor.getVendor())
-                                        .setMaxRange(sensor.getMaximumRange())
-                                        .setResolution(sensor.getResolution())
-                                        .setPower(sensor.getPower())
-                                        .setMinDelayUs(sensor.getMinDelay())
-                                        .setMaxDelayUs(sensor.getMaxDelay())
-                                        .build())
-                .collect(Collectors.toList());
+        // For demo purposes we only need a single accelerometer and proximity sensor.
+        return Stream.of(
+                        mSensorManager.getDefaultSensor(Sensor.TYPE_ACCELEROMETER),
+                        mSensorManager.getDefaultSensor(Sensor.TYPE_PROXIMITY))
+                .filter(Objects::nonNull)
+                .map(VirtualSensorController::createSensorCapabilitiesFromSensor)
+                .toList();
+    }
+
+    private static SensorCapabilities createSensorCapabilitiesFromSensor(Sensor sensor) {
+        return SensorCapabilities.newBuilder()
+                .setType(sensor.getType())
+                .setName(sensor.getName())
+                .setVendor(sensor.getVendor())
+                .setMaxRange(sensor.getMaximumRange())
+                .setResolution(sensor.getResolution())
+                .setPower(sensor.getPower())
+                .setMinDelayUs(sensor.getMinDelay())
+                .setMaxDelayUs(sensor.getMaxDelay())
+                .setIsWakeUpSensor(sensor.isWakeUpSensor())
+                .setReportingMode(sensor.getReportingMode())
+                .build();
     }
 
     private void processRemoteEvent(RemoteEvent remoteEvent) {
